Add green button to top of page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 
     <!-- Top WhatsApp CTA (fixed) -->
     <a id="topWhatsappCta" class="top-cta btn green" href="https://wa.me/972525359582" target="_blank" rel="noopener" data-i18n="cta.whatsapp">הזמנה בוואטסאפ</a>
+    
+    <!-- New Green Button at Top -->
+    <button id="newGreenButton" class="top-green-btn" onclick="alert('Green button clicked!')">New Green Button</button>
 
     <!-- Floating language switch at top -->
     <div class="lang-floating" aria-label="Language switcher">
